# tiny-renderer

./: .pre-commit-config.yaml  Cargo.toml  README.md
examples/: simple.rs
macros/: Cargo.toml
macros/src/: deref.rs  deref_mut.rs  lib.rs
rfcs/: 模板.md
src/: build_in.rs  device.rs  error.rs  graph.rs  graphic_context.rs  handle.rs  lib.rs  main.rs  pass.rs  renderer.rs  swap_chain.rs  texture.rs  transient_resource_cache.rs  windows.rs  world_renderer.rs
src/embedded/: shader.wgsl
src/frame_graph/: blackboard.rs  device_pass.rs  graph.rs  mod.rs  pass.rs  pass_builder.rs  pass_node.rs  pass_node_builder.rs  render_context.rs  resource.rs  resource_board.rs  resource_node.rs  resource_pass_context.rs  resource_registry.rs  resource_table.rs  temporal.rs  transient_resource_cache.rs
src/gfx_base/: bind_group.rs  bind_group_layout.rs  buffer.rs  cache.rs  command_buffer.rs  device.rs  handle.rs  macros.rs  mod.rs  pipeline.rs  pipeline_layout.rs  render_context.rs  render_pass.rs  resource_table.rs  sample.rs  shader.rs  shader_module.rs  swap_chain.rs  texture.rs  texture_view.rs  transient_resource_cache.rs
src/gfx_wgpu/: bind_group.rs  bind_group_layout.rs  buffer.rs  command_buffer.rs  device.rs  mod.rs  pipeline_layout.rs  render_pass.rs  render_pipeline.rs  sample.rs  shader.wgsl  shader_module.rs  swap_chain.rs  texture.rs  texture_view.rs
src/render_backend/: mod.rs
src/renderer/: mod.rs  shader.wgsl
src/resource/: buffer.rs  image.rs  mod.rs
src/world_renderer/: meshes.rs  mod.rs  render_camera.rs  renderer.rs  schedule.rs
(+12 files in other folders)
