[package]
name = "tiny-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "24.0.0"
naga = { version = "24", features = ["wgsl-in"] }
tracing = { version = "0.1" }
thiserror = { version = "1.0" }
downcast-rs = "2.0.1"
naga_oil = { version = "0.17", default-features = false, features = [
    "test_shader",
] }

fyrox-resource = "0.36.2"
fyrox-core = "0.36.2"

[dev-dependencies]
winit = "0.30"
tracing-subscriber = { version = "0.3" }
futures-lite = { version = "2.6" }